--- a/.env.sample
+++ b/.env.sample
@@ -13,7 +13,7 @@ STORAGE=
 GAS_LIMIT=
 FEE_AMOUNT=
 
-
+# amount delimited by semiconolon, e.g. 1000untrn,2000uatom
 DROP_AMOUNT=
 # in hours
 TIMEOUT=
