--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "NODE_OPTIONS=--openssl-legacy-provider esr ./main.ts"
+    "start": "esr ./main.ts"
   },
   "dependencies": {
     "@cosmos-client/core": "^0.46.0",
